-Fixed a bug that caused the top of the website to be too wide -Changed the look of the 'Projects' section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,19 +2,6 @@
   background: linear-gradient(300deg, #F24C3D, #F29727, #F2BE22);
   background-size: 100% 100%;
 }
-  animation: gradient-animation 18s ease infinite;
-
-@keyframes gradient-animation {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
 
 .icon-square {
   width: 3rem;
